@@ -273,6 +273,8 @@ Fixed bugs:
 * mixing of add and addConfigured methods in Mapper/ChainedMapper
   causes incorrect chaining. Bugzilla report 40228.
 
+* <zip filesonly="true"> included empty directories.  Bugzilla report 40258.
+
 Other changes:
 --------------
 
